# Libppcompveri

./: .clang-format  CLAUDE.md  CMakeLists.txt  README.md  VERSIONS.TXT  build.gradle  gradle.properties  settings.gradle
.copilot/context/: architecture.md  coding-standards.md
.copilot/prompts/: emv-flow-cot.md
.copilot/tasks/: dependency-map.md
.github/copilot/: tasks.yml
.github/workflows/: build.yml
include/: pp_sdi_bridge.h  ppcomp.h  ppcomp_internal.h  ppcomp_version.h
libppcomp-repo/.copilot/prompts/: reusable-prompts.md
libppcomp-repo/.copilot/tasks/: 00-bootstrap.md
libppcomp-repo/.github/: copilot-instructions.md
scripts/: build.sh
src/: ppcomp_callbacks.cpp  ppcomp_detection.cpp  ppcomp_emv_ct.cpp  ppcomp_emv_ctls.cpp  ppcomp_errors.cpp  ppcomp_globals.cpp  ppcomp_lifecycle.cpp  ppcomp_mapping.cpp  ppcomp_pin.cpp  ppcomp_tables.cpp
tables/: table_loader.cpp  table_loader.h
tests/: CMakeLists.txt  test_callbacks.cpp  test_detection.cpp  test_emv_ct.cpp  test_emv_ctls.cpp  test_lifecycle.cpp  test_mapping.cpp  test_pin.cpp  test_tables.cpp
tests/integration/: CMakeLists.txt  test_homologacao_se.cpp
tests/mocks/: sdi_mock.cpp  sdi_mock.h
tests/mocks/sdiclient/: sdi_emv.h  sdi_if.h  sdi_nfc.h
